// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TemplateStudioHeader renders Stage templateType correctly 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  >
    <div
      class="Layout--horizontal StyledProps--main"
    >
      <div
        class="Layout--horizontal StyledProps--main Breadcrumbs--breadcrumbs StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
      >
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
        >
          <a
            class="Breadcrumbs--breadcrumb"
            href="/account/undefined/settings"
          >
            <span
              class="bp3-icon bp3-icon-cog StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-primary7"
              icon="cog"
            >
              <svg
                data-icon="cog"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  cog
                </desc>
                <path
                  d="M15.19 6.39h-1.85c-.11-.37-.27-.71-.45-1.04l1.36-1.36c.31-.31.31-.82 0-1.13l-1.13-1.13a.803.803 0 00-1.13 0l-1.36 1.36c-.33-.17-.67-.33-1.04-.44V.79c0-.44-.36-.8-.8-.8h-1.6c-.44 0-.8.36-.8.8v1.86c-.39.12-.75.28-1.1.47l-1.3-1.3c-.3-.3-.79-.3-1.09 0L1.82 2.91c-.3.3-.3.79 0 1.09l1.3 1.3c-.2.34-.36.7-.48 1.09H.79c-.44 0-.8.36-.8.8v1.6c0 .44.36.8.8.8h1.85c.11.37.27.71.45 1.04l-1.36 1.36c-.31.31-.31.82 0 1.13l1.13 1.13c.31.31.82.31 1.13 0l1.36-1.36c.33.18.67.33 1.04.44v1.86c0 .44.36.8.8.8h1.6c.44 0 .8-.36.8-.8v-1.86c.39-.12.75-.28 1.1-.47l1.3 1.3c.3.3.79.3 1.09 0l1.09-1.09c.3-.3.3-.79 0-1.09l-1.3-1.3c.19-.35.36-.71.48-1.1h1.85c.44 0 .8-.36.8-.8v-1.6a.816.816 0 00-.81-.79zm-7.2 4.6c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
            >
              common.accountSettings
            </p>
          </a>
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
            data-icon="main-chevron-right"
          >
            <svg
              height="8"
              viewBox="0 0 8 14"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                fill="#4d5969"
              />
            </svg>
          </span>
        </div>
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
        >
          <a
            class="Breadcrumbs--breadcrumb"
            href="/account/undefined/settings/resources/templates"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
            >
              common.templates
            </p>
          </a>
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
            data-icon="main-chevron-right"
          >
            <svg
              height="8"
              viewBox="0 0 8 14"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                fill="#4d5969"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main templateStudioTitle"
    >
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="css-1gx1swu"
          fill="#0BC8D6"
          stroke="#03C0CD"
          width="0"
        >
          <div>
            <p
              class="StyledProps--font StyledProps--main title StyledProps--font-size-xsmall StyledProps--font-weight-bold"
              style="color: rgb(232, 232, 255);"
            >
              Stage Template
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TemplateStudioHeader renders Step templateType correctly 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  >
    <div
      class="Layout--horizontal StyledProps--main"
    >
      <div
        class="Layout--horizontal StyledProps--main Breadcrumbs--breadcrumbs StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
      >
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
        >
          <a
            class="Breadcrumbs--breadcrumb"
            href="/account/undefined/settings"
          >
            <span
              class="bp3-icon bp3-icon-cog StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-primary7"
              icon="cog"
            >
              <svg
                data-icon="cog"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  cog
                </desc>
                <path
                  d="M15.19 6.39h-1.85c-.11-.37-.27-.71-.45-1.04l1.36-1.36c.31-.31.31-.82 0-1.13l-1.13-1.13a.803.803 0 00-1.13 0l-1.36 1.36c-.33-.17-.67-.33-1.04-.44V.79c0-.44-.36-.8-.8-.8h-1.6c-.44 0-.8.36-.8.8v1.86c-.39.12-.75.28-1.1.47l-1.3-1.3c-.3-.3-.79-.3-1.09 0L1.82 2.91c-.3.3-.3.79 0 1.09l1.3 1.3c-.2.34-.36.7-.48 1.09H.79c-.44 0-.8.36-.8.8v1.6c0 .44.36.8.8.8h1.85c.11.37.27.71.45 1.04l-1.36 1.36c-.31.31-.31.82 0 1.13l1.13 1.13c.31.31.82.31 1.13 0l1.36-1.36c.33.18.67.33 1.04.44v1.86c0 .44.36.8.8.8h1.6c.44 0 .8-.36.8-.8v-1.86c.39-.12.75-.28 1.1-.47l1.3 1.3c.3.3.79.3 1.09 0l1.09-1.09c.3-.3.3-.79 0-1.09l-1.3-1.3c.19-.35.36-.71.48-1.1h1.85c.44 0 .8-.36.8-.8v-1.6a.816.816 0 00-.81-.79zm-7.2 4.6c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
            >
              common.accountSettings
            </p>
          </a>
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
            data-icon="main-chevron-right"
          >
            <svg
              height="8"
              viewBox="0 0 8 14"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                fill="#4d5969"
              />
            </svg>
          </span>
        </div>
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
        >
          <a
            class="Breadcrumbs--breadcrumb"
            href="/account/undefined/settings/resources/templates"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
            >
              common.templates
            </p>
          </a>
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
            data-icon="main-chevron-right"
          >
            <svg
              height="8"
              viewBox="0 0 8 14"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                fill="#4d5969"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main templateStudioTitle"
    >
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="css-1utvf27"
          fill="#7D4DD3"
          stroke="#6938C0"
          width="0"
        >
          <div>
            <p
              class="StyledProps--font StyledProps--main title StyledProps--font-size-xsmall StyledProps--font-weight-bold"
              style="color: rgb(234, 222, 255);"
            >
              Step Template
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TemplateStudioHeader renders default title correctly 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  >
    <div
      class="Layout--horizontal StyledProps--main"
    >
      <div
        class="Layout--horizontal StyledProps--main Breadcrumbs--breadcrumbs StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
      >
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
        >
          <a
            class="Breadcrumbs--breadcrumb"
            href="/account/undefined/settings"
          >
            <span
              class="bp3-icon bp3-icon-cog StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-primary7"
              icon="cog"
            >
              <svg
                data-icon="cog"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  cog
                </desc>
                <path
                  d="M15.19 6.39h-1.85c-.11-.37-.27-.71-.45-1.04l1.36-1.36c.31-.31.31-.82 0-1.13l-1.13-1.13a.803.803 0 00-1.13 0l-1.36 1.36c-.33-.17-.67-.33-1.04-.44V.79c0-.44-.36-.8-.8-.8h-1.6c-.44 0-.8.36-.8.8v1.86c-.39.12-.75.28-1.1.47l-1.3-1.3c-.3-.3-.79-.3-1.09 0L1.82 2.91c-.3.3-.3.79 0 1.09l1.3 1.3c-.2.34-.36.7-.48 1.09H.79c-.44 0-.8.36-.8.8v1.6c0 .44.36.8.8.8h1.85c.11.37.27.71.45 1.04l-1.36 1.36c-.31.31-.31.82 0 1.13l1.13 1.13c.31.31.82.31 1.13 0l1.36-1.36c.33.18.67.33 1.04.44v1.86c0 .44.36.8.8.8h1.6c.44 0 .8-.36.8-.8v-1.86c.39-.12.75-.28 1.1-.47l1.3 1.3c.3.3.79.3 1.09 0l1.09-1.09c.3-.3.3-.79 0-1.09l-1.3-1.3c.19-.35.36-.71.48-1.1h1.85c.44 0 .8-.36.8-.8v-1.6a.816.816 0 00-.81-.79zm-7.2 4.6c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
            >
              common.accountSettings
            </p>
          </a>
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
            data-icon="main-chevron-right"
          >
            <svg
              height="8"
              viewBox="0 0 8 14"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                fill="#4d5969"
              />
            </svg>
          </span>
        </div>
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
        >
          <a
            class="Breadcrumbs--breadcrumb"
            href="/account/undefined/settings/resources/templates"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
            >
              common.templates
            </p>
          </a>
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
            data-icon="main-chevron-right"
          >
            <svg
              height="8"
              viewBox="0 0 8 14"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                fill="#4d5969"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main templateStudioTitle"
    >
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="css-ifmyfr"
          width="0"
        >
          <div>
            <p
              class="StyledProps--font StyledProps--main title StyledProps--font-size-xsmall StyledProps--font-weight-bold"
            >
               Template
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
